<resources>
    <string name="app_name">BMI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">BMI Calculator</string>
    <string name="age">Age：</string>
    <string name="sex">Sex：</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height：</string>
    <string name="weight">Weight：</string>

    <string-array name="height">
      <item>cm</item>
      <item>m</item>
    </string-array>>

    <string-array name="weight">
        <item>kg</item>
        <item>bl</item>
    </string-array>>

    <string name="underWt">Under Weight</string>
    <string name="nomalWt">Normal Weight</string>
    <string name="overWt">Over Weight</string>
    <string name="fat">Fat</string>

    <string name="calculate">Calculate</string>
</resources>
